# samurai

./: .gitignore  Manifest.in  pyproject.toml  setup.py
sam2/: sam2_video_predictor.py
sam2/modeling/: sam2_base.py
sam2/utils/: misc.py  streaming_video_loader.py
samurai/: __init__.py  automatic_mask_generator.py  build_sam.py  sam2_image_predictor.py  sam2_video_predictor.py
samurai/configs/samurai/: sam2.1_hiera_b+.yaml
samurai/modeling/: memory_attention.py  memory_encoder.py  sam2_base.py  sam2_utils.py
samurai/modeling/backbones/: hieradet.py
samurai/modeling/sam/: mask_decoder.py  prompt_encoder.py  transformer.py
samurai/sam2/: build_sam.py  sam2_video_predictor.py
samurai/sam2/configs/samurai/: sam2.1_hiera_b+.yaml
samurai/sam2/modeling/: memory_attention.py  memory_encoder.py  sam2_base.py  sam2_utils.py
samurai/sam2/modeling/backbones/: hieradet.py
samurai/sam2/modeling/sam/: mask_decoder.py  prompt_encoder.py  transformer.py
samurai/utils/: misc.py  streaming_video_loader.py  transforms.py
scripts/: demo.py  main_inference.py  main_inference_chunk.py  stream.py
