[build-system]
requires = [
    "setuptools>=61.0",  
    "torch>=2.3.1",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "samurai"
version = "0.1.0"
description = "SAM for zero-shot visual tracking with Motion-Aware Memory"
requires-python = ">=3.10"
readme = "README.md"  # Add this line
dependencies = [
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "numpy>=1.24.4",
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "pillow>=9.4.0",
    "opencv-python",
    "scipy",
    "loguru",
    "matplotlib>=3.7",
    "pandas",
    "huggingface_hub",
    "loguru",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.setuptools.package-data]
"samurai" = ["configs/**/*.yaml"]

[project.optional-dependencies]
dev = [
    "pytest",
]